--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Fashion Box</title>
-  <link rel="icon" type="image/png" href="D:\my folder\logo.png">
+  <link rel="icon" type="https://github.com/yadavaarnav19-sketch/Fashion-Box/blob/a5cde76a465f75592810cb57d715e8e11c07da64/logo.png">
 
 
   <!-- Embedded CSS (theme + layout + modal + responsiveness) -->
@@ -512,4 +512,5 @@
     });
   </script>
 </body>
+
 </html>
