--- a/index.html
+++ b/index.html
@@ -514,10 +514,10 @@
             </div>
           </div>
 
-          <div class="product-card animate-card" data-name="Bridal Edit" data-price="Contact" data-img="https://images.unsplash.com/photo-1556740749-887f6717d7e4?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=6b6d">
-            <img loading="lazy" src="https://images.unsplash.com/photo-1556740749-887f6717d7e4?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=6b6d" alt="Bridal silhouette">
+          <div class="product-card animate-card" data-name="Bridal Dress" data-price="Contact" data-img="https://i.pinimg.com/originals/5a/4f/1b/5a4f1be41c25a6454f5143eac4b703a6.jpg">
+            <img loading="lazy" src="https://i.pinimg.com/originals/5a/4f/1b/5a4f1be41c25a6454f5143eac4b703a6.jpg" alt="Bridal silhouette">
             <div class="card-body">
-              <h3>Bridal Edit</h3>
+              <h3>Bridal Dress</h3>
               <p>Made-to-order ensembles</p>
               <div class="product-meta"><span>Contact</span><span class="badge">BESPOKE</span></div>
             </div>
@@ -885,6 +885,7 @@
   </script>
 </body>
 </html>
+
 
 
 
