--- a/index.html
+++ b/index.html
@@ -514,8 +514,8 @@
             </div>
           </div>
 
-          <div class="product-card animate-card" data-name="Bridal Dress" data-price="Contact" data-img="https://i.pinimg.com/originals/5a/4f/1b/5a4f1be41c25a6454f5143eac4b703a6.jpg">
-            <img loading="lazy" src="https://i.pinimg.com/originals/5a/4f/1b/5a4f1be41c25a6454f5143eac4b703a6.jpg" alt="Bridal silhouette">
+          <div class="product-card animate-card" data-name="Bridal Dress" data-price="Contact" data-img="https://www.nameerabyfarooq.com/cdn/shop/files/PakistaniBridalDressinRedLehengaandCholiStyleOnline_620x.jpg?v=1689543771">
+            <img loading="lazy" src="https://www.nameerabyfarooq.com/cdn/shop/files/PakistaniBridalDressinRedLehengaandCholiStyleOnline_620x.jpg?v=1689543771" alt="Bridal silhouette">
             <div class="card-body">
               <h3>Bridal Dress</h3>
               <p>Made-to-order ensembles</p>
@@ -885,6 +885,7 @@
   </script>
 </body>
 </html>
+
 
 
 
