--- a/index.html
+++ b/index.html
@@ -412,17 +412,16 @@
             </div>
           </div>
 
-          <div class="product-card" data-name="Pastel Anarkali" data-price="₹3,199" data-img="https://images.unsplash.com/photo-1520975911278-0c8e9e33c9b5?auto=format&fit=crop&w=800&q=80" tabindex="0">
-            <!-- Changed source to a stable Unsplash URL to avoid possible hotlink/referrer blocking in in-app browsers -->
-            <img loading="lazy" src="https://images.unsplash.com/photo-1520975911278-0c8e9e33c9b5?auto=format&fit=crop&w=800&q=80" alt="Pastel Anarkali dress">
+          <div class="product-card" data-name="Pastel Anarkali" data-price="₹1,299" data-img="https://shreeman.in/cdn/shop/files/Book1-24_c1041cfd-10d2-491d-b214-001d8eabf366.jpg?v=1720262455&width=1667" tabindex="0">
+            <img loading="lazy" src="https://shreeman.in/cdn/shop/files/Book1-24_c1041cfd-10d2-491d-b214-001d8eabf366.jpg?v=1720262455&width=1667" alt="Silk Saree blush tone">
             <div class="card-body">
               <div>
                 <h3>Pastel Anarkali</h3>
-                <p class="muted">Regal flare</p>
+                <p class="muted">Banarasi weave</p>
               </div>
               <div class="product-meta">
-                <span>₹3,199</span>
-                <span class="badge">TRENDING</span>
+                <span>₹1,299</span>
+                <span class="badge">NEW</span>
               </div>
             </div>
           </div>
@@ -506,12 +505,13 @@
             </div>
           </div>
 
-          <div class="product-card animate-card" data-name="Pastel Anarkali" data-price="₹3,199" data-img="https://images.unsplash.com/photo-1520975911278-0c8e9e33c9b5?auto=format&fit=crop&w=800&q=80" tabindex="0">
-            <img loading="lazy" src="https://images.unsplash.com/photo-1520975911278-0c8e9e33c9b5?auto=format&fit=crop&w=800&q=80" alt="Pastel Anarkali dress">
+          <div class="product-grid">
+          <div class="product-card animate-card" data-name="Pastel Anarkali" data-price="₹1,299" data-img="https://shreeman.in/cdn/shop/files/Book1-24_c1041cfd-10d2-491d-b214-001d8eabf366.jpg?v=1720262455&width=1667" tabindex="0">
+            <img loading="lazy" src="https://shreeman.in/cdn/shop/files/Book1-24_c1041cfd-10d2-491d-b214-001d8eabf366.jpg?v=1720262455&width=1667" alt="Silk Saree blush tone">
             <div class="card-body">
               <h3>Pastel Anarkali</h3>
-              <p>Flowing silhouette for celebrations</p>
-              <div class="product-meta"><span>₹3,199</span><span class="badge">LIMITED</span></div>
+              <p>Premium weave, artisan finish</p>
+              <div class="product-meta"><span>₹1,299</span><span class="badge">NEW</span></div>
             </div>
           </div>
 
@@ -886,3 +886,4 @@
   </script>
 </body>
 </html>
+
