--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
 
   <div>
     <h3>Connect</h3>
-    <div style="display:flex; gap:12px; align-items:center;">
+    <div style="display:flex; gap:12px;">
       <a href="#">Instagram</a>
       <a href="#">Pinterest</a>
       <a href="#">Contact</a>
@@ -932,4 +932,5 @@
   </script>
 </body>
 </html>
+
 
