--- a/index.html
+++ b/index.html
@@ -784,6 +784,8 @@
   <div>
     <h3>Fashion Box</h3>
     <p>Luxury Pink Fashion Crafted For Your Vibe</p>
+    <p>                                         </p>
+    <p>                                         </p>
   </div>
 
   <div>
@@ -803,7 +805,7 @@
 
   <div>
     <h3>Connect</h3>
-    <div style="display:flex; gap:12px;">
+   <!-- <div style="display:flex; gap:12px;"> -->
       <a href="#">Instagram</a>
       <a href="#">Pinterest</a>
       <a href="#">Contact</a>
@@ -1016,6 +1018,7 @@
   </script>
 </body>
 </html>
+
 
 
 
